# YAKC

./: .gitignore  LICENSE  README.md  config.json  index.html  main.js  package-lock.json  package.json  renderer.js  vite.config.ts
.github/: funding.yml
.github/workflows/: ci.yml  release.yml
assets/icons/mac/: icon.icns
keycode/: index.js  maps.js
packaging/aur/: .SRCINFO  PKGBUILD  publish.sh
src/: charToUnicode.js  defaultConfig.json  index.html  keyMapper.json  layout.css  main.js  main.ts  overlay.js  preload.js  renderer.js  settings.css  settings.html  settings.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  filter.rs  keymap.rs  main.rs  overlay.rs  setup.rs  tts.rs
src-tauri/src/input/: evdev_backend.rs  mod.rs  rdev_backend.rs  wayland_keymap.rs
src/keyboardLayouts/: english.js  german.js
test/: main.js
