[package]
name = "yakc-v2"
version = "2.0.0"
description = "YAKC - Yet Another Key Caster"
authors = ["IAMMODEV"]
license = "MIT"
repository = "https://github.com/iammodev/YAKC"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-shell = "2.0.0-alpha"
active-win-pos-rs = "0.8.2"
rdev = "0.5.3"
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
